# solid

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
cargo-solid/: CHANGELOG.md  Cargo.toml
cargo-solid/src/: main.rs  solidity_contract.rs  solidity_field.rs  solidity_type.rs  to_rust.rs
examples/cargo-solid-example/: Cargo.toml  stateful.json  stateful.sol
examples/cargo-solid-example/src/: main.rs  stateful.rs
examples/contract-call/: Cargo.toml
examples/contract-call/src/: main.rs
solid-core/: Cargo.toml
solid-core/src/: address.rs  boolean.rs  builder.rs  bytes.rs  decode.rs  encode.rs  error.rs  ethereum_types.rs  fixed.rs  function.rs  into_type.rs  lib.rs  selector.rs  string.rs  test.rs  tuples.rs
solid-core/src/bytesfix/: mod.rs  nightly.rs  stable.rs
solid-core/src/derive/: de.rs  mod.rs  ser.rs
solid-core/src/int/: bigint.rs  mod.rs  nightly.rs  stable.rs
solid-derive/: Cargo.toml
solid-derive/src/: decode.rs  encode.rs  lib.rs
solidity-core/: Cargo.toml  rustfmt.toml
solidity-core/src/: address.rs  builder.rs  bytes.rs  bytesfix.rs  decode.rs  encode.rs  error.rs  fixed.rs  function.rs  int.rs  into_type.rs  lib.rs  selector.rs  string.rs  tuples.rs
solidity-core/src/bytesfix/: mod.rs  nightly.rs  stable.rs
solidity-core/src/derive/: ser.rs
solidity-core/src/int/: bigint.rs  nightly.rs  stable.rs
solidity-derive/: Cargo.toml
solidity-derive/src/: decode.rs  encode.rs  lib.rs
src/: address.rs  boolean.rs  builder.rs  bytes.rs  bytesfix.rs  encode.rs  error.rs  from_bytes.rs  function.rs  int.rs  into_type.rs  lib.rs  result.rs  selector.rs  string.rs  test.rs  tuples.rs  types.rs
src/derive/: de.rs  error.rs  from.rs  mod.rs  ser.rs
src/from_bytes/: bytes.rs  mod.rs  number.rs  string.rs
src/function/: mod.rs
src/solidity/: address.rs  bytes.rs  function.rs  into.rs  method.rs  mod.rs  solidity.rs  test.rs
