[workspace]
members = [
    ".",
    "solid-core",
    "solid-derive",
    "examples/contract-call"
]

[package]
name = "solid"
version = "0.1.0"
authors = ["Daniel Akhterov <akhterovd@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Solidity encoding/decoding library"
homepage = "https://github.com/danielakhterov/solid"
repository = "https://github.com/danielakhterov/solid"
keywords = [ "solidity", "encoding", "decoding" ]

[dependencies]
solid-derive = { path = "solid-derive", version = "0.1.0", optional = true }
solid-core = { path = "solid-core", version = "0.1.0", default-features = false }

[features]
default = [ "serde", "derive" ]

serde = [ "solid-core/derive" ]

derive = [ "solid-derive" ]

nightly = [ "solid-core/nightly" ]

bigint = [ "solid-core/bigint" ]

# fixed = [ "solid-core/fixedmxn" ]

# [dev-dependencies]
# serde_derive = "1.0.104"
