[workspace]
members = [
    ".",
    "solid-core",
    "solid-derive",
    "cargo-solid",
    "examples/contract-call",
    "examples/cargo-solid-example"
]

[package]
name = "solid"
version = "0.1.2"
authors = ["Daniel Akhterov <akhterovd@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Solidity encoding/decoding library"
homepage = "https://github.com/danielakhterov/solid"
repository = "https://github.com/danielakhterov/solid"
keywords = [ "solidity", "encoding", "decoding" ]

[dependencies]
solid-derive = { path = "solid-derive", version = "0.1.0", optional = true }
solid-core = { path = "solid-core", version = "0.1.0", default-features = false }
serde = "1.0.104"

[dev-dependencies]

[features]
default = [ "deser", "derive" ]

deser = [ "solid-core/derive" ]

derive = [ "solid-derive" ]

nightly = [ "solid-core/nightly" ]

bigint = [ "solid-core/bigint" ]

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
