[package]
name = "cargo-solid"
version = "0.1.1"
authors = ["Daniel Akhterov <akhterovd@gmail.com>"]
edition = "2018"
description = "Subcommand for cargo to genereate Solidity struct definitions."
license = "MIT OR Apache-2.0"
repository = "https://github.com/danielakhterov/solid"

[dependencies]
serde = { version = "1.0.104", features = [ "derive" ] }
anyhow = "1.0.26"
structopt = "0.3.11"
serde_json = "1.0.48"
