[package]
name = "solid-derive"
version = "0.1.3"
authors = ["Daniel Akhterov <akhterovd@gmail.com>"]
edition = "2018"
description = "Macros for the `solid` crate. Not intended to be used directly."
license = "MIT OR Apache-2.0"
repository = "https://github.com/danielakhterov/solid"

[dependencies]
proc-macro2 = "1.0.8"
syn = { version = "1.0.16", features = [ "full", "extra-traits" ] }
quote = "1.0.2"

[lib]
proc-macro = true

[dev-dependencies]
solid-core = { path = "../solid-core" }
