[package]
name = "solidity-core"
version = "0.1.0"
authors = ["Daniel Akhterov <akhterovd@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3.2"
sha3 = "0.8.2"
hex = "0.4.0"
anyhow = "1.0.26"
serde = { version = "1.0.104", features = [ "derive" ], optional = true }
thiserror = "1.0.10"
num-bigint = { version = "0.2.6", optional = true }
fixed = { version = "0.5.4", optional = true }

[features]
default = [ "serde" ]
derive = [ "serde" ]
nightly = []
bigint = [ "num-bigint" ]
fixedmxn = [ "fixed" ]
