[package]
name = "solidity-derive"
version = "0.1.0"
authors = ["Daniel Akhterov <akhterovd@gmail.com>"]
edition = "2018"

[dependencies]
proc-macro2 = "1.0.8"
syn = { version = "1.0.16", features = [ "full" ] }
quote = "1.0.2"
solidity-core = { path = "../solidity-core", default-features = false }

[lib]
proc-macro = true
